--- a/package.json
+++ b/package.json
@@ -19,7 +19,11 @@
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.4.3",
     "react-scripts": "5.0.1",
+    "react-scroll": "^1.8.8",
+    "react-scroll-to": "^3.0.0-beta.6",
     "redux": "^4.2.0",
+    "sass": "^1.56.1",
+    "smooth-scroll": "^16.1.3",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
