--- a/package.json
+++ b/package.json
@@ -9,12 +9,13 @@
     "bootstrap": "^5.2.3",
     "gh-pages": "^4.0.0",
     "react": "^18.2.0",
+    "react-anchor-link-smooth-scroll": "^1.0.12",
     "react-bootstrap": "^2.6.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.4.3",
     "react-scripts": "5.0.1",
     "redux": "^4.2.0",
-    "sass": "^1.56.1",
+    "terser": "3.14.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -40,5 +41,9 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "autoprefixer": "^10.4.13",
+    "postcss": "^8.4.19"
   }
 }
